--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "dotenv": "^16.0.0",
+    "vue": "^2.6.14",
+    "vue-js-modal": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
